--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,11 @@ uvicorn = "^0.32.1"
 fastapi = "^0.115.5"
 groq = "^0.12.0"
 python-dotenv = "^1.0.1"
-tweety-ns = "^1.1.9"
 httpx = {extras = ["http2"], version = "^0.27.2"}
+tweepy = "^4.14.0"
+aiohttp = "^3.11.7"
+async-lru = "^2.0.4"
+oauthlib = "^3.2.2"
 
 
 [build-system]
