--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,7 +1,3 @@
-__pycache__
-.env
-session.tw_session
-dump.rdb
 # Logs
 logs
 *.log
@@ -17,7 +13,7 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.vscode
+.vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
@@ -26,4 +22,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
